@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
skinparam padding 2
skinparam ranksep 100
skinparam classFontSize 18


class Fruto
{
    -String nome
    -int id
    -setNome(String nome)
    -setId(int id)
    +getNome()
    +getId()
    +toString()
    +equals(Object o)
    +hasCode()
}

class FrutoStore
{
    -HashMap<Integer,Fruto> frutoStore;
    +getFruto(int idFruto)
    +hasFruto(int idFruto)
    +addFruto(int idFruto,String nomeFruto)
    +size()
    +iterator()
}

class Pais
{
    -TreeMap<Integer,ProducaoAno> producaoAnual
    -String nomePais
    -int paisCodigo
    -int prodTotal
    -setNomePais(String nome)
    -setCodigoPais(int paisCodigo)
    +getNomePais()
    +getPaisCodigo()
    +getProdTotal()
    -incrementProducao(int prodTotal)
    +containsAnoProducao(int ano)
    +addAnoProducao(ProducaoAno ano)
    +createAnoProducao(int ano)
    +getProducaoAno(Integer ano)
    +iterator()
    +toString()
    +equals()
    +hasCode()
}

class PaisStore
{
    -HashMap<Integer,Pais> paisStore
    +getStream()
    +hasPais(int id)
    +addPais(int id,String paisNome)
    +getPais(id)
    +iterator()
}

class ProducaoAno
{
    -HashMap<Integer,ProducaoFrutoPorPaisPorAno> prodAnual
    -int quantidadeProdAnual
    -int ano
    +hasProdFruto(int frutoId)
    +getProducaoFruto(int frutoId)
    +addProducaoFruto(Fruto fruto, int quantidadeProd)
    -incrementProdAnual(int prod)
    +getProdAnual()
    +getAno()
    +iterator()
    +compareTo(ProducaoAno outro)
}

class ProducaoFrutoPorPaisPorAno
{
    -Fruto fruto
    -int quantidadeProducao
    +getFruto()
    -setFruto(Fruto fruto)
    +getQuantidadeProducao()
    -setQuantidadeProducao(int quantidadeProducao)
}

class CSVReader
{
    -final CSVHeader header
    -final int EXPECTED_COLUMNS
    -final String DEFAULT_DELIMITER;
    -{static}final char BOM = '\ufeff'
    +readCSV(File dir)
    -isHeader(String line)
    -maybeSkipBom(Reader reader)
    -checkQuotationMark(Reader reader)
}

enum CSVHeader
{
    -final int columns
    -final String delimiter
    +getColumnCount()
    +getDelimiter()
}

class ListPrinter
{
    +{static}print(Collection<E> list, String header, PrintStream stream)
}

class Pair
{
    -T first
    -S second
    +getFirst()
    +getSecond()
    +toString()
}

class Triplet
{
    -T first
    -S second
    +getFirst()
    +getSecond()
    +getThird()
}

class App
{
    -PaisStore paisStore
    -FrutoStore frutoStore
    +getPaisStore()
    +getFrutoStore()
    -{static}App singleton = null
    +getInstance()
}

class Main
{
    +{static}main(String[] args)
}

PaisStore "1" -- "*" Pais
Pais "1" -- "*" ProducaoAno
ProducaoAno "1" -- "*" ProducaoFrutoPorPaisPorAno
ProducaoFrutoPorPaisPorAno "*" -- "1" Fruto
FrutoStore "1" -- "*" Fruto
Main ..> Pais
Main ..> PaisStore
Main ..> ProducaoAno
Main ..> ProducaoFrutoPorPaisPorAno
Main ..> FrutoStore
Main ..>Fruto
Main ..> App
Main ..> CSVReader
Main ..> ListPrinter
Main ..> Pair
Main ..> Triplet
App --> PaisStore
App --> FrutoStore
CSVReader --> CSVHeader


@enduml